<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvUser"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="12dp"
    app:cardCornerRadius="7dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="7dp"
        android:weightSum="6"
        android:gravity="center">

        <ImageView
            android:id="@+id/posterImage"
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/movie_photo"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/posterImage"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/posterImage"
            app:layout_constraintTop_toTopOf="@id/posterImage"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="5dp"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvRating"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/overview"/>

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:text="@string/rating"/>

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvOverview"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:text="@string/release_date"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>